* v1.3.0 (unreleased, December/January)
  - [TODO] QtQuick support

* v1.2.0 (unreleased, November)
  - [DONE] Wayland support

* v1.1.0 (26 October 2020)
  - New drop indicator style type: Segmented Indicators
  - Windows: Drop Shadow for floating windows
  - Added AutoHide / SideBar support
  - Added FocusScope support
  - Added DockWidget::isFocused() and DockWidgetBase::isFocusedChanged()
  - Added Config::Flag_AlwaysTitleBarWhenFloating, which complements Flag_HideTitleBarWhenTabsVisible
  - Added Config::Flag_DontUseUtilityWindowsForFloating
  - Added Config::Flag_TitleBarHasMinimizeButton
  - Added Config::Flag_TitleBarNoFloatButton
  - Added Config::Flag_AutoHideSupport
  - Added Config::setTabbingAllowedFunc(TabbingAllowedFunc func)
  - HDPI improvements, new high-res icons
  - Bugfixes:
    - Windows: Fixed windows not having proper minimum size.
    - Windows: Fixed moving windows across screens with different DPI (#72)
    - Don't center floating windows if the user set a custom position (#75)
    - Fixed floating window's title not being correct (#74)
    - Fixed focus scope not reacting when clicking on current tab (#71)
    - Fixed floating window borders not being rendered correctly on HDPI due to rounding errors.
    - cmake/Python - don't require pkg-config, only use if available (#68)

* v1.0.0 (2 September 2020)
  - PySide2 bindings
  - Rewrote the layouting engine, resulting in a huge stability gain and makes it easy to add new features
  - Honour min/max sizes and some QSizePolicy heuristics
  - Lazy resize (resize only when dropping the separator)
  - Native Windows dragging (supporting Aero-snap)
  - Allow to hide TitleBar and just show tabs. Allow dragging via the tab bar.
  - Reordering tabs with mouse
  - Partial layout save/restore (affecting only a subset)
  - Double-click on title bar to maximize
  - Maximize button on the title bar
  - HDPI: Relative layouting restore
  - Allow to make a dock widget non-closable and non-dockable