@@ -83,6 +83,7 @@ public:
         Flag_TitleBarNoFloatButton = 0x4000, ///> The TitleBar won't show the float button
         Flag_AutoHideSupport = 0x8000 | Flag_TitleBarNoFloatButton, ///> Supports minimizing dock widgets to the side-bar.
                                                                     ///> By default it also turns off the float button, but you can remove Flag_TitleBarNoFloatButton to have both.
+        Flag_KeepAboveIfNotUtilityWindow = 0x10000, ///> Only meaningful if Flag_DontUseUtilityFloatingWindows is set. If floating windows are normal windows, you might still want them to keep above and not minimize when you focus the main window.
         Flag_Default = Flag_AeroSnapWithClientDecos ///> The defaults
     };
     Q_DECLARE_FLAGS(Flags, Flag)
